Including gif on README

--- a/fourier_features.ipynb
+++ b/fourier_features.ipynb
@@ -13,7 +13,8 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.widgets import Slider\n",
     "from matplotlib.ticker import FormatStrFormatter\n",
-    "import imageio"
+    "import imageio\n",
+    "## implementation of the paper  https://arxiv.org/abs/2006.10739"
    ]
   },
   {
@@ -34,12 +35,7 @@
     "        assert x.shape[-1] == self.W.shape[0]\n",
     "        x_proj = (x @ self.W) * 2 * np.pi # [bs,features,embedding_size]\n",
     "        x_fourier = np.concatenate([np.sin(x_proj), np.cos(x_proj)], axis=-1)\n",
-    "        return x_fourier\n",
-    "\n",
-    "# hue_values = np.zeros_like(x_fourier[0].numpy())\n",
-    "# hue_values[:len(hue_values)//2] = 1\n",
-    "# u = torch.distributions.uniform.Uniform(torch.zeros(batch_size,features_size),torch.ones(batch_size,features_size))\n",
-    "# x = u.sample() #[bs,features], features can be age,health state, sex, etc, x between [0,1)"
+    "        return x_fourier"
    ]
   },
   {
@@ -119,20 +115,6 @@
    "source": [
     "for filename in set(filenames):\n",
     "    os.remove(filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a1f6c63",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[CODE][Pedro][7/Oct/2021] Hey guys, @Tian and I implemented yesterday a random fourier features embedding from the paper below. I can be used for embedding any scalar information into higher dimensional vector for conditioning. It seems to work very well. In this case, we are converting a scalar between 0 and 1 into a 10 dimensional vector. You can see that small changes in the scalar output significant change in some of the embeddings. \n",
-    "\n",
-    "Is very simple, only 5 lines of numpy code. \n",
-    "\n",
-    "https://arxiv.org/abs/2006.10739"
    ]
   }
  ],
